# curso-data-engineering-andre-sionek

./: .gitignore  README.md  aula2  aula4.txt  aula5.txt  pyproject.toml  requirements.txt
.github/workflows/: github_actions.yaml
aula1/: aula1.txt
aula1/0.Yaml_vs_Json/: exemplo.yaml
aula1/2.Redshift/: redshift.yaml
aula1/3.Iam/: iam.yaml
aula1/4.kinesis/: insert_records.py  kinesis.yaml
aula2/: aula2.md  bucket.yaml  deploy.py  requirements.txt  test_github_actions.py  tests.py
aula2/jinja/: exemplo_jinja.py  processa_template.py
aula3/: aula3.md  aula3.txt
aula4/: aula4.md
aula5/: aula5.md
aula6/: aula6.md
