[tool.poetry]
name = "bootcamp_data_engineering"
version = "0.1.0"
description = "Turma 6 bootcamp Adndré Sionek"
authors = ["Vitor Loures <vitorf.loures@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.18.48"
fake-web-events = "^0.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
